[gd_scene load_steps=11 format=3 uid="uid://qplhbaemoi7h"]

[ext_resource type="PackedScene" uid="uid://drvotnnbycnvw" path="res://scenes/player/player.tscn" id="1_2hidt"]
[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_luf86"]
[ext_resource type="PackedScene" uid="uid://ccuwkxi6okw85" path="res://scenes/mob/mob.tscn" id="2_6jql0"]
[ext_resource type="Script" path="res://scenes/main/ScoreLabel.gd" id="4_fm1cs"]

[sub_resource type="BoxShape3D" id="BoxShape3D_e5vk2"]
custom_solver_bias = 0.009
margin = 0.0
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_ksumo"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_232sq"]
albedo_color = Color(1, 0.458824, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_v4t81"]
material = SubResource("StandardMaterial3D_232sq")

[sub_resource type="Curve3D" id="Curve3D_lqwsg"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -12.9941, 0, -12.1112, 0, 0, 0, 0, 0, 0, 15.0685, 0, -12.1112, 0, 0, 0, 0, 0, 0, 14.9683, 0, 14.0472, 0, 0, 0, 0, 0, 0, -13.395, 0, 13.7465, 0, 0, 0, 0, 0, 0, -12.9941, 0, -12.1112),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_brqw4"]

[node name="Main" type="Node"]
script = ExtResource("1_luf86")
mob_scene = ExtResource("2_6jql0")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_e5vk2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_ksumo")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.54895, 0.835855, 0, -0.835855, -0.54895, 0, 20.0871, 0)
light_energy = 1.647
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_2hidt")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.885799, 0.464069, 0, -0.464069, 0.885799, 0, 17.2094, 6.02654)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(0.99983, -0.0095863, -0.0157811, 0.0134041, 0.964631, 0.263262, 0.0126992, -0.263429, 0.964595, 0, 0.973359, 36.3677)
projection = 1
size = 19.0

[node name="Cylinders" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -12)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
mesh = SubResource("CylinderMesh_v4t81")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0, 0)
mesh = SubResource("CylinderMesh_v4t81")
skeleton = NodePath("")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 26)
mesh = SubResource("CylinderMesh_v4t81")
skeleton = NodePath("")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0, 26)
mesh = SubResource("CylinderMesh_v4t81")
skeleton = NodePath("")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_lqwsg")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -12.9941, 0, -12.1112)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 19.0
offset_top = 13.0
offset_right = 80.0
offset_bottom = 39.0
theme = SubResource("Theme_brqw4")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "Score: 0
"
script = ExtResource("4_fm1cs")

[node name="Retry" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Label" type="Label" parent="UI/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -13.0
offset_right = 75.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "Press Enter to retry"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
